buck: repository prep work
This lays the basic groundwork to invoke buck2 in a way that barely works and
builds nothing.

The `jj.bzl` code will be used in some upcoming diffs to add `BUCK` files to the
various crates.

Signed-off-by: Austin Seipp <aseipp@pobox.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
+
+    "files.associations": {
+        ".buckconfig": "ini",
+        ".buckconfig.local": "ini",
+        "*.bzl": "starlark",
+        "*.bxl": "starlark",
+        "BUILD": "starlark",
+        "PACKAGE": "starlark",
+    },
 }
