buck: unify cargo deps with reindeer deps
This includes a very simple script to do the synchronization between the
workspace Cargo file and the Buck2-specific Cargo file, automatically.

Signed-off-by: Austin Seipp <aseipp@pobox.com>

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           check_filenames: true
           check_hidden: true
-          skip: ./target,./.jj,*.lock
+          skip: ./target,./.jj,*.lock,./buck/third-party/rust/BUILD
           ignore_words_list: crate,NotIn
