--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,8 @@ nav:
 
 - FAQ: 'FAQ.md'
 
+- 'Jujutsu from first principles': 'jj_first_principles.md'
+
 - "CLI Reference": 'cli-reference.md'
 
 - Testimonials: 'testimonials.md'
