cargo: suppress warnings for `cfg(buck_build)`
This cfg value isn't understood by Cargo, so it needs to have the warning
suppressed by default. We could also add an entry to `build.rs` too, but not
every package has one.

To be used by upcoming diffs.

Signed-off-by: Austin Seipp <aseipp@pobox.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ documentation = "https://martinvonz.github.io/jj/"
 categories = ["version-control", "development-tools"]
 keywords = ["VCS", "DVCS", "SCM", "Git", "Mercurial"]
 
+[workspace.lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(buck_build)'] }
+
 [workspace.dependencies]
 anyhow = "1.0.86"
 assert_cmd = "2.0.8"
