--- a/lib/testutils/Cargo.toml
+++ b/lib/testutils/Cargo.toml
@@ -12,7 +12,8 @@ repository = { workspace = true }
 documentation = { workspace = true }
 readme = { workspace = true }
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lints]
+workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
